# posetail

./: .gitignore  ONNX_INTERFACE.md  README.md  demo_client.py  environment.yaml  eval.sh  export_onnx.py  grid_search.ipynb  grid_search.py  grid_search_lightning.py  inference.ipynb  inference.py  inference_utils.py  inference_video.py  inference_video_onnx.py  pyproject.toml  render_video.py  resnet.ipynb  setup.py  test_rat7m_2d.py  train.py  train.sh  train_lightning.sh  train_rat7m.py  train_rat7m_2d.py  train_rat7m_lightning.py  train_utils.py  train_utils_lightning.py  verify_onnx_parity.py  viz3d.py
configs/: config.toml  config_default_2d.toml  config_default_3d.toml  config_encoder_3d.toml  config_encoder_3d_2d.toml  config_encoder_3d_finetuning.toml  config_encoder_3d_finetuning_2d.toml  config_encoder_3d_finetuning_h100.toml  config_encoder_3d_l4.toml  config_encoder_3d_other.toml  config_encoder_3d_queue.toml  config_hpc.toml  config_hpc_3d.toml  config_minicubes_3d.toml  config_minicubes_finetuning.toml  config_minicubes_finetuning_2.toml  config_minicubes_full_training.toml  config_triplane_finetuning.toml  minicubes_combined_latent_dim.toml  minicubes_combined_res.toml  minicubes_full_training.toml  minicubes_full_training_2.toml  minicubes_full_training_hiera.toml  minicubes_full_training_hiera_exclude.toml  minicubes_full_training_kpts.toml  minicubes_kubric_aug.toml  minicubes_kubric_aug_dim.toml  minicubes_kubric_aug_res.toml  minicubes_kubric_default.toml  minicubes_kubric_default2.toml  minicubes_kubric_default_5.toml  minicubes_kubric_default_5_kpts.toml  minicubes_kubric_dim.toml  minicubes_kubric_dim_speed1.toml  minicubes_kubric_dim_speed2.toml  minicubes_kubric_dim_thresh5.toml  minicubes_kubric_dim_thresh85.toml  minicubes_kubric_hiera.toml  minicubes_kubric_hiera2.toml  minicubes_kubric_kpts1_thresh7.toml  (+13 more)
posetail/datasets/: datasets.py  download_rat7m.py  download_rat7m.sh  inference_dataset.py  posetail_dataset.py  utils.py
posetail/posetail/: cube.py  cube_batched.py  encoder_decoder.py  eval_metrics.py  export_wrapper.py  losses.py  networks.py  tracker.py  tracker_encoder.py  transformer.py  utils.py
server/: SERVER.md  example_client.py  server.py
